objects/vlocity_ins__ProfSegAssignment__c.object
<CustomObject>
    <description>Assignment of Profiling segments</description>
    <fields>
        <fullName>vlocity_ins__AddDate__c</fullName>
        <description>Segment Start Date ( when a segment was last added)</description>
        <label>Add Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EndStory__c</fullName>
        <description>Story Id resulting in this segment removal</description>
        <label>End Story</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <formula>vlocity_ins__ProfSegment__r.vlocity_ins__ActiveFlg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectId__c</fullName>
        <description>Object ,with assigned Segment</description>
        <label>Object Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectLink__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;vlocity_ins__ObjectId__c,  Name , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectType__c</fullName>
        <description>Type of Object being assigned in this segment</description>
        <label>ObjectType</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentSegmentCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Profiling Segment Category</label>
        <referenceTo>vlocity_ins__ProfilingSegmentCategory__c</referenceTo>
        <relationshipName>ProfilingSegmentAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProfSegment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Profiing Segment FK .</description>
        <label>Profiling Segment</label>
        <referenceTo>vlocity_ins__ProfilingSegment__c</referenceTo>
        <relationshipName>ProfilingSegment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RemoveDate__c</fullName>
        <description>Date when the segment was last removed.</description>
        <label>Remove Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RemovedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If an assignment is removed, check this flag &amp; update RemoveDate</description>
        <label>RemovedFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SegmentData__c</fullName>
        <description>Additional Data attached to the segment</description>
        <label>Segment Data</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StartStory__c</fullName>
        <description>Story Id resulting in this Segment Assignment</description>
        <label>Start Story</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ValueInNumber__c</fullName>
        <formula>VALUE(vlocity_ins__Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value In Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Value__c</fullName>
        <description>Segment value ( segment strength) eg 0-5</description>
        <label>Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Deprecated Profiling Segment Assignment</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>vlocity_ins__ObjectId__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>vlocity_ins__RemoveDate__c</columns>
        <columns>vlocity_ins__RemovedFlag__c</columns>
        <columns>vlocity_ins__StartStory__c</columns>
        <columns>vlocity_ins__EndStory__c</columns>
        <columns>vlocity_ins__ProfSegment__c</columns>
        <columns>vlocity_ins__Value__c</columns>
        <columns>vlocity_ins__ObjectType__c</columns>
        <columns>vlocity_ins__IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Profiling Segment Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deprecated Profiling Segment Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>